--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,17 @@
 {
   "name": "staff-server",
+  "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/index.js",
+    "test:runtime": "node dist/index.js & sleep 2 && curl -f http://localhost:8080/"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
