--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,17 +1,6 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "target": "ES2022",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "types": ["node"]
-  },
-  "include": ["src/**/*.ts", "types/**/*.d.ts"],
-  "exclude": ["**/*.test.ts", "**/*.spec.ts"]
+    "noEmitOnError": true
+  }
 }
