--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "outDir": "dist",
     "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
-    "strict": false,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
